7 cards rendered and styled

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body {
+  width: 80%;
+  margin: 0 auto;
+  font-weight: 900;
+}
+
 .container {
   display: flex;
   justify-content: space-between;
