--- a/src/components/WeatherBox.css
+++ b/src/components/WeatherBox.css
@@ -1,8 +1,11 @@
+.container {
+    justify-content: center;
+}
+
 .weatherCardContainer {
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .weatherCard {
